@@ -2,6 +2,10 @@
 Changes with Apache 2.3.0
 [ When backported to 2.2.x, remove entry from this file ]
 
+  *) mod_log_config: Add format options for %p so that the actual local
+     or remote port can be logged.  PR 43415.  [Adam Hasselbalch Hansen 
+     <ahh@one.com>, Ruediger Pluem, Jeff Trawick]
+
   *) scoreboard: improve error message on apr_shm_create failure
      PR 40037 [Nick Kew]
 
